--- a/src/ProductsApi/Properties/launchSettings.json
+++ b/src/ProductsApi/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "http://localhost:5239",
+      "applicationUrl": "http://localhost:5233;http://localhost:5233",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -14,7 +14,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "https://localhost:7034;http://localhost:5239",
+      "applicationUrl": "https://localhost:7110;http://localhost:7110",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
