--- a/src/ProductsApi/appsettings.json
+++ b/src/ProductsApi/appsettings.json
@@ -5,11 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "GoogleAuthSettings": {
-    "ClientId": "your_client_id",
-    "ClientSecret": "your_client_secret",
-    "RedirectUri": "https://localhost:5001/signin-google"
-  }
+  "AllowedHosts": "*"
 }
-
