--- a/src/todo/appsettings.json
+++ b/src/todo/appsettings.json
@@ -7,30 +7,32 @@
   },
   "AllowedHosts": "*",
   "Serilog": {
-    "Using": [
-      "Serilog.Sinks.Console",
-      "Serilog.Sinks.File",
-      "Serilog.Sinks.Seq"
-    ],
-    "MinimumLevel": "Debug",
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
     "WriteTo": [
       {
-        "Name": "Console",
-        "Args": {
-          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
-          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
-        }
+        "Name": "Console"
       },
       {
         "Name": "File",
         "Args": {
-          "path": "Logs/log.txt"
+          "path": "logs/log-.txt",
+          "rollingInterval": "Day"
         }
-      },
-      {
-        "Name": "Seq",
-        "Args": {"serverUrl": "http://localhost:5341" }
       }
-    ]
+    ],
+    "Enrich": [ "FromLogContext" ],
+    "Properties": {
+      "Application": "MythicalCreaturesAPI"
+    }
+  },
+  "ConnectionStrings": {
+    "TodoContext": "Data Source=TodoApp.db"
   }
 }
